# maktab

./: README.md  package-lock.json  setup.sh
.opencode/: AGENTS.md  opencode.json
.opencode/agents/: fiqh.md  manuscript.md
.opencode/commands/: hadith-search.md
.opencode/skills/: hadith-grading.md
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/resources/: .gitkeep
apps/desktop/src-tauri/src/: lib.rs
apps/web/: index.html
apps/web/src/: App.tsx
apps/web/src/lib/: opencode.ts
apps/web/src/styles/: globals.css
maktab/: .env.example  .gitignore  package.json
maktab/.opencode/: opencode.json
maktab/.opencode/agents/: hadith.md  translation.md
maktab/.opencode/commands/: chain-check.md  cite-arabic.md  madhhab-compare.md
maktab/.opencode/skills/: arabic-transliteration.md  usul-al-fiqh.md
maktab/apps/desktop/src-tauri/: tauri.conf.json
maktab/apps/desktop/src-tauri/src/: main.rs
maktab/apps/web/: package.json  vite.config.ts
maktab/apps/web/src/: App.tsx
maktab/apps/web/src/lib/: opencode.ts
maktab/scripts/: dev.sh
scripts/: bundle-opencode.sh  dev.sh
